2004-05-03  Christophe de Vienne  <cdevienne@netcourrier.com>

	* libxml++/parsers/saxparser.cc: Replaced again the use of
	Glib::ustring(const char*) constructor by Glib::ustring(std::string).
	Fixes #141824.

2004-05-03  Christophe de Vienne  <cdevienne@netcourrier.com>

	* libxml++/parsers/saxparser.cc: Replace the use of
	Glib::ustring(const char*, unsigned) constructor by Glib::ustring(const char*).
	Fixes #141824.

2004-05-04  Murray Cumming  <murrayc@murrayc@com>

	* libxml++-2.6.pc.in: Made it require glibmm-2.4, so that apps do not
	have to check for this themselves.

2.6.0:
	
2004-04-13  Murray Cumming  <murrayc@murrayc.com>

	* libxml++/Makefile.am: Change library name to 2.6 instead of 2.5.
	* libxml++-2.6.pc.in: Report the changed library name.

2004-03-27  Murray Cumming  <murrayc@murrayc.com>

	* libxml++/parsers/textreader.[h|cc]: Correct constness of 
	get_current_node(), so there is a const and non-const version.

2.5.2:

2004-02-16  Christophe de VIENNE  <cdevienne@netcourrier.com>

	* libxml++/nodes/element.cc: Check return value of xmlHasNsProp to
	fix issue #134390 (as reported by John Coyle). Use xmlHasProp instead
	of testing each attributes.

2004-02-16  Christophe de VIENNE  <cdevienne@netcourrier.com>

	* libxml++-2.6.pc.in: Added libxml-2.0 to Requires: and removed
	@LIBXML_LIBS@ from libs, as suggested by Albert Chin.

2004-02-16  Christophe de VIENNE  <cdevienne@netcourrier.com>

	* libxml++/nodes/node.cc, libxml++/parsers/parser.h:
	Merged in patches from Albert Chin to get libxml++ build using the SUN,
	HP, SGI & AIX C++ compilers.

2004-02-13  Jim Garrison  <garrison@case.edu>

	* libxml++/attribute.h, libxml++/document.h, libxml++/dtd.h,
	  libxml++/io/ostreamoutputbuffer.[h|cc],
	  libxml++/io/outputbuffer.[h|cc], libxml++/keepblanks.[h|cc],
	  libxml++/nodes/node.h, libxml++/parsers/parser.h, 
	  libxml++/parsers/saxparser.h, libxml++/parsers/textreader.[h|cc]:
	Removed unnecessary semicolons

2.5.1:
	