@@ -387,10 +387,13 @@ void SaxParserCallback::characters(void * context, const xmlChar* ch, int len)
 
   try
   {
-    // Here we force the use of Glib::ustring::ustring( std::string const & )
+    // Here we force the use of Glib::ustring::ustring( InputIterator begin, InputIterator end )
     // instead of Glib::ustring::ustring( const char*, size_type ) because it
     // waits for the length of the string in characters, not in bytes.
-    parser->on_characters(Glib::ustring( std::string((const char*) ch, len) ));
+    parser->on_cdata_block(
+        Glib::ustring(
+          reinterpret_cast<const char *>(ch),
+          reinterpret_cast<const char *>(ch + len) ) );
   }
   catch(const exception& e)
   {
@@ -489,9 +492,12 @@ void SaxParserCallback::cdata_block(void* context, const xmlChar* value, int len
 
   try
   {
-    // here we force the use of Glib::ustring::ustring( std::string const & ).
+    // Here we force the use of Glib::ustring::ustring( InputIterator begin, InputIterator end )
     // see comments in SaxParserCallback::characters
-    parser->on_cdata_block(Glib::ustring( std::string((const char*)value, len) ));
+    parser->on_cdata_block(
+        Glib::ustring(
+          reinterpret_cast<const char *>(value),
+          reinterpret_cast<const char *>(value + len) ) );
   }
   catch(const exception& e)
   {
